# line_follower

./: CMakeLists.txt  README.md  package.xml  setup.py
.docker_env/: docker-compose.yml  launch_world.sh
.docker_env/gzweb/: Dockerfile
.docker_env/turtlebot/: Dockerfile
launch/: lf.launch  manual_drive.launch
maps/: circle.world
scripts/: control.py  curv_to_cmd_vel.py  detect.py  manual_drive.py
src/line_follower/: line_detector.py
