<?xml version="1.0"?>
<package format="2">
  <name>line_follower</name>
  <version>0.1.0</version>
  <description>
  Line follower
  </description>
  <maintainer email="samuel.mitchell@tiem.toyota-industries.com">Sam Mitchell</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
